# emt-entities

./: .gitignore  LICENSE  README.md  config.py  enrich_persons.py  enrich_places.py  fetch_images.py  join_tables.py  make_storymap.py  make_timeline.py  make_xml.py  pyproject.toml  requirements.txt
.github/workflows/: dump_baserow.yml
indices/: listevent.xml  listorg.xml  listperson.xml  listplace.xml
json_dumps/: attachment_type.json  events.json  mentioned_letters.json  mentions.json  orgs.json  persons.json  places.json  storymap.json  timeline.json  visits.json
templates/: listevent.xml  listorg.xml  listperson.xml  listplace.xml
